--- a/.github/workfllow/main.yml
+++ b/.github/workfllow/main.yml
@@ -1,1 +1,32 @@
+name: Deploy to my-portfolio
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: deploy static site to S3 bucket
+        run: |
+          aws s3 sync .s3://my-portfolio-github --delete
+
+      - name: Make files public
+        run: |
+          aws s3 cp s3://${{ secrets.S3_BUCKET }} s3://${{ secrets.S3_BUCKET }} \
+          --recursive \
+          --acl public-read
 
