--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ap-south-1
 
       - name: Sync files to S3
         run: |
-          aws s3 sync ./ s3://my-portfolio-github --delete
-
-      - name: Make files public
-        run: |
-          aws s3 cp s3://my-portfolio-github s3://my-portfolio-github \
-          --recursive \
-          --acl public-read
+          aws s3 sync ./ s3://my-portfolio-github --delete --exclude ".git/*" --exclude ".github/*"
