--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
-      - name: Install dependencies and build
+      - name: Sync static files to S3
         run: |
-          npm install
-          npm run build
-
-      - name: Sync build to S3
-        run: |
-          aws s3 sync ./build s3://my-portfolio-github --delete
+          aws s3 sync ./ s3://my-portfolio-github --delete --exclude ".git/*" --exclude ".github/*"
